# gojjam-engine

./: .gitignore  README.md  pyproject.toml
gojjam/calculated_model/: base_calculated_model.py  calculated_model_factory.py  postgres_calculated_model.py
gojjam/cli/: main.py
gojjam/cli/commands/: init.py  run.py
gojjam/cli/templates/ingest/: gojjam_ingest_sinks.yml.mako  gojjam_ingest_sources.yml.mako
gojjam/cli/templates/ingest/models/: sample_users.sql.mako
gojjam/cli/templates/transform/: gojjam_transform_settings.yml.mako
gojjam/cli/templates/transform/models/: user_metrics.sql.mako
gojjam/ingest/: main.py
gojjam/ingest/datasource/: yml_parser.py
gojjam/ingest/engine/: estl.py
gojjam/ingest/engines/: base_ingest_engine.py  cursor_ingest_engine.py  default_ingest_engine.py  incremental_cursor_ingest_engine.py  ingest_engine_factory.py  sync_cursor_ingest_engine.py
gojjam/ingest/extractors/: azure_blob_storage_extractor.py  base_extract.py  csv_extractor.py  duckdb_extractor.py  extractor_factory.py  http_extractor.py  postgres_extractor.py  s3_extractor.py
gojjam/ingest/loaders/: base_loader.py  load_factory.py  postgres_loader.py  terminal_loader.py
gojjam/ingest/model/: model_loader.py
gojjam/ingest/sink/: yml_parser.py
gojjam/transform/: main.py
gojjam/transform/dag/: dag_builder.py
gojjam/transform/engine/: base_transform_engine.py  engine_factory.py  postgres_transform_engine.py
gojjam/transform/utils/: yml_parser.py
